[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Expense Tracker API"
authors = ["Muhammad Ahmad <muhammadahmadkon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "5.0.3"
djangorestframework = "3.15.1"
python-dotenv = "1.0.1"
drf-spectacular = "0.27.1"
mysqlclient = "2.2.4"
loguru = "0.7.2"
django-mptt = "0.16.0"
djangorestframework-simplejwt = "5.3.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.0"
ruff = "0.3.4"
black = "24.3.0"
isort = "5.13.2"
mypy = "1.9.0"
lxml = "5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Ruff section
# ref: https://github.com/charliermarsh/ruff#reference
[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [
    "venv",
    ".tox",
    "docs",
    "build",
    "migrations/*",
    "tox_reports/*",
]
[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I"
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]


# MyPY sections
# ref: https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = "3.12"
show_error_codes = true
html_report = "tox_reports/mypy"
exclude = [
    "venv",
    ".tox",
    "docs",
    "build",
    "migrations/*",
    "tox_reports/*",
]

[[tool.mypy.overrides]]
module = [
    "common.*",
    "django.*",
    "rest_framework.*",
    "OpenSSL.*",
    "PIL.*",
    "faker.*",
    "loguru.*",
    "lxml.*",
    "mptt.*",
    "oauthlib.*",
    "phonenumbers.*",
    "pycountry.*",
    "python_http_client.*",
    "pytz.*",
    "requests_oauthlib.*",
    "sentry_sdk.*",
    "shortuuid.*",
    "mysqlclient.*",
    "hvac.*",
]
ignore_missing_imports = true
